Corrected colors on vertical filigree guideline styles.
Added handling or filigree guideline and contents.

Added sub-table CSS overrides.

Added table row background and made table row divider appear below every table row and not just

--- a/src/scss/hightouch/components/filigrees.scss
+++ b/src/scss/hightouch/components/filigrees.scss
@@ -3,13 +3,13 @@
   height: 100%;
   display: flex;
   flex-direction: column;
-  
+
   .guideline-header,
   .guideline-footer {
     position: relative;
     height: 5.5px;
 
-    svg {
+    svg path {
       stroke-width: 1px;
       stroke: var(--t5e-color-text-onInverse-gold);
     }
@@ -50,5 +50,21 @@
     bottom: 0;
     left: 0;
     right: 0;
+  }
+}
+
+.filigree-guideline-and-contents {
+  display: flex;
+  flex-direction: row;
+  align-items: stretch;
+  justify-content: stretch;
+  gap: 0.5rem;
+
+  > * {
+    flex: 1;
+  }
+
+  > .vertical-filigree-guideline {
+    flex: 0 0 auto;
   }
 }
